JCR based security. As of this commit, Magnolia no longer checks permissions on nodes, but delegates this operation to the JCR layer itself. Work in progress.
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@43263 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f